[project]
name = "vitrocad-mp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "python-dotenv",
    "requests",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["api", "scripts"]

[project.scripts]
send_contract_notification = "scripts.send_contract_notification:send_contract_notification"

[tool.uv]
package = true